[gd_scene load_steps=14 format=3 uid="uid://bbvhxvk65o8el"]

[ext_resource type="Script" uid="uid://bbea6nmm50rew" path="res://Enemy/enemy_explode.gd" id="1_l5ux5"]
[ext_resource type="Texture2D" uid="uid://dwebk504yrptx" path="res://Textures/Enemy/Tomato Sprite Sheet.png" id="2_po1tl"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_56dop"]
[ext_resource type="PackedScene" uid="uid://uhr6mtuisqm1" path="res://Utility/hit_box.tscn" id="4_yexrv"]
[ext_resource type="AudioStream" uid="uid://bi7t7cjthnhhc" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_hf8ms"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e773v"]
radius = 4.0

[sub_resource type="Animation" id="Animation_xfnyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yteaa"]
resource_name = "dead"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 44]
}

[sub_resource type="Animation" id="Animation_w8hns"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_l5ux5"]
resource_name = "hurt"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_regpg"]
_data = {
&"RESET": SubResource("Animation_xfnyu"),
&"dead": SubResource("Animation_yteaa"),
&"hurt": SubResource("Animation_l5ux5"),
&"walk": SubResource("Animation_w8hns")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rborl"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucec4"]
size = Vector2(12.5, 14.5)

[node name="enemy_tomato" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_l5ux5")
hp = 5
enemy_damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(-1, 1)
texture = ExtResource("2_po1tl")
hframes = 9
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
shape = SubResource("CircleShape2D_e773v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_regpg")
}
speed_scale = 1.5

[node name="HurtBox" parent="." instance=ExtResource("3_56dop")]
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-0.5, 7.5)
shape = SubResource("RectangleShape2D_rborl")

[node name="HitBox" parent="." instance=ExtResource("4_yexrv")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-0.25, 7.25)
shape = SubResource("RectangleShape2D_ucec4")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hf8ms")
volume_db = -20.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
